# magicTool

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  build.sh  debug_tool_firmware.code-workspace  magicTool_host.code-workspace
.github/workflows/: ci.yml  release.yml
docs/: magiclib.md
firmware/: CMakeLists.txt  main.cpp  reset_interface.c  tusb_config.h  usb_descriptors.c
hardware/: README.md  generate_magictool_kicad.py  magictool.kicad_pcb  magictool.kicad_prl  magictool.kicad_pro  magictool.kicad_sch
host/: CMakeLists.txt  README.md  magictool.pc.in  magictool_native.pc.in
host/examples/: basic_usage.cpp  basic_usage_native.cpp  magicUI.cpp
host/include/debug_tool_qt5/: DebugToolDevice.h
host/include/magictool/: magicdebug.h
host/include/magictool/native/: magicdebug.h
host/src/: DebugToolDevice.cpp  magicdebug.cpp  magicdebug_native.cpp
